--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,19 +1,68 @@
 body {
 	background: #323232;
+	font-family: 'Hind', sans-serif;
 }
 
 .machine {
 	position: relative;
 	width: 690px;
-	height: 500px;
+	height: 550px;
 	margin: 50px auto 0 auto;
+	padding-top: 20px;
 	border-radius: 10px;
-	background-image: url("https://image.freepik.com/foto-gratis/textura-de-cuero-negro-textura-de-fondo-textura-de-cuero-textura-negra-textura-de-tela_1627-1792.jpg");
-	background-size: cover;
 	border: 2px solid #111;
+	background: rgba(185,136,96,1);
+	background: -moz-linear-gradient(top, rgba(185,136,96,1) 0%, rgba(153,91,40,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(185,136,96,1)), color-stop(100%, rgba(153,91,40,1)));
+	background: -webkit-linear-gradient(top, rgba(185,136,96,1) 0%, rgba(153,91,40,1) 100%);
+	background: -o-linear-gradient(top, rgba(185,136,96,1) 0%, rgba(153,91,40,1) 100%);
+	background: -ms-linear-gradient(top, rgba(185,136,96,1) 0%, rgba(153,91,40,1) 100%);
+	background: linear-gradient(to bottom, rgba(185,136,96,1) 0%, rgba(153,91,40,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b98860', endColorstr='#995b28', GradientType=0 );
 	-webkit-box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.75);
 	box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.75);
+}
+
+.topDiv {
+	width: 650px;
+	height: 80px;
+	margin: 0 auto;
+	color: #d3d3d3;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	border-radius: 10px;
+	border: 1px solid #111;
+	background: rgba(69,70,74,1);
+	background: -moz-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(69,70,74,1)), color-stop(100%, rgba(50,51,53,1)));
+	background: -webkit-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
+	background: -o-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
+	background: -ms-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
+	background: linear-gradient(to bottom, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45464a', endColorstr='#323335', GradientType=0 );
+	-webkit-box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75), 0px 0px 10px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75), 0px 0px 10px 0px rgba(0,0,0,0.75);
+	box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75), 0px 0px 10px 0px rgba(0,0,0,0.75);
+}
+
+.volume {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.volumeDisplay {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 30px;
+	height: 30px;
+	background: #1a0e1f;
+	font-family: 'Codystar', cursive;
+	border-radius: 5px;
 }
 
 .title {
@@ -24,7 +73,7 @@ body {
 
 .controls {
 	display: flex;
-	padding-top: 60px;
+	padding-top: 30px;
 	justify-content: space-around;
 	align-items: center;
 }
@@ -35,7 +84,6 @@ body {
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(3, 1fr);
 	grid-gap: 10px;
-	font-family: 'Hind', sans-serif;
 	padding: 10px;
 	border-radius: 10px;
 	border: 1px solid #111;
@@ -62,9 +110,10 @@ body {
 	align-items: center;
 	color: #383838;
 	font-size: 20px;
+	text-transform: uppercase;
 	cursor: pointer;
 	border-radius: 10px;
-	background: #d3d3d3;
+	background: #ddd;
 	-webkit-box-shadow: inset 2px 2px 8px 3px rgba(255,255,255,1);
 	-moz-box-shadow: inset 2px 2px 8px 3px rgba(255,255,255,1);
 	box-shadow: inset 2px 2px 8px 3px rgba(255,255,255,1);
