--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,7 +5,7 @@ body {
 
 .machine {
 	position: relative;
-	width: 690px;
+	width: 750px;
 	height: 550px;
 	margin: 50px auto 0 auto;
 	padding-top: 20px;
@@ -25,12 +25,13 @@ body {
 }
 
 .topDiv {
-	width: 650px;
+	position: relative;
+	width: 700px;
 	height: 80px;
 	margin: 0 auto;
 	color: #d3d3d3;
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	align-items: center;
 	border-radius: 10px;
 	border: 1px solid #111;
@@ -47,22 +48,40 @@ body {
 	box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75), 0px 0px 10px 0px rgba(0,0,0,0.75);
 }
 
+.brand {
+	position: absolute;
+	top: 0;
+	left: 3%;
+	font-size: 50px;
+	margin: 0;
+	font-family: 'Noto Sans', sans-serif;
+}
+
 .volume {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	padding: 0 20px;
 }
 
-.volumeDisplay {
+.Display {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 30px;
+	width: 40px;
 	height: 30px;
 	background: #1a0e1f;
 	font-family: 'Codystar', cursive;
 	border-radius: 5px;
+}
+
+.bankDiv {
+	position: absolute;
+	right: 5%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
 
 .title {
@@ -157,11 +176,18 @@ body {
   transition: all 50ms cubic-bezier(0.42, 0, 0.58, 1);
 }
 
+.sliderCont {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
 .sliderDiv {
 	position: relative;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin: 0 5px;
 	width: 50px;
 	height: 412px;
 	border-radius: 10px;
@@ -181,6 +207,7 @@ body {
 
 .slider {
 	height: 350px;
+	width: 100%;
 	-webkit-appearance: slider-vertical;
 }
 
@@ -188,3 +215,80 @@ body {
 	outline: none;
 }
 
+.switch {
+  position: relative;
+  width: 50px;
+  height: 20px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  display: none;
+}
+
+/* The slider */
+.slide {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+
+}
+
+.slide:before {
+  position: absolute;
+  content: "";
+  height: 50px;
+  width: 50px;
+  top: -15px;
+  left: 0;
+  border-radius: 50%;
+	background: rgba(247,247,247,1);
+	background: -moz-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
+	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(247,247,247,1)), color-stop(54%, rgba(168,168,168,1)), color-stop(100%, rgba(168,168,168,1)));
+	background: -webkit-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
+	background: -o-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
+	background: -ms-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
+	background: radial-gradient(ellipse at center, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#a8a8a8', GradientType=1 );
+	-webkit-box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.75);
+  -webkit-transition: 0.05s;
+  transition: 0.05s;
+}
+
+.slide:after {
+	position: absolute;
+	top: -15px;
+	left: 24px;
+	content: "";
+	height: 27px;
+	width: 3px;
+	background: #555;
+	border-radius: 5px;
+	z-index: 5;
+}
+
+input[type=checkbox]:checked + .slide {
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#mini {
+	padding-right: 8px;
+	padding-bottom: 30px;
+}
+
+#rouge {
+	padding-left: 8px;
+	padding-bottom: 30px;
+}
