--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -33,6 +33,8 @@ body {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	font-family: 'Noto Sans', sans-serif;
+	font-size: 13px;
 	border-radius: 10px;
 	border: 1px solid #111;
 	background: rgba(69,70,74,1);
@@ -51,7 +53,6 @@ body {
 .brand {
 	font-size: 50px;
 	margin: 0;
-	font-family: 'Noto Sans', sans-serif;
 }
 
 .volume {
@@ -62,14 +63,15 @@ body {
 	padding: 0 20px;
 }
 
-.Display {
+.display {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 40px;
-	height: 30px;
+	width: 45px;
+	height: 35px;
 	background: #1a0e1f;
 	font-family: 'Codystar', cursive;
+	font-size: 18px;
 	border-radius: 5px;
 }
 
@@ -77,6 +79,82 @@ body {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+}
+
+.switch {
+  position: relative;
+  width: 50px;
+  height: 20px;
+}
+
+.switch input {
+  display: none;
+}
+
+.slide {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+
+}
+
+.slide:before {
+  position: absolute;
+  content: "";
+  height: 50px;
+  width: 50px;
+  top: -15px;
+  left: 0;
+  border-radius: 50%;
+	background: rgba(247,247,247,1);
+	background: -moz-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
+	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(247,247,247,1)), color-stop(54%, rgba(168,168,168,1)), color-stop(100%, rgba(168,168,168,1)));
+	background: -webkit-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
+	background: -o-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
+	background: -ms-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
+	background: radial-gradient(ellipse at center, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#a8a8a8', GradientType=1 );
+	-webkit-box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.75);
+  -webkit-transition: 0.05s;
+  transition: 0.05s;
+}
+
+.slide:after {
+	position: absolute;
+	top: -15px;
+	left: 24px;
+	content: "";
+	height: 27px;
+	width: 3px;
+	background: #444;
+	border-radius: 10px;
+	z-index: 5;
+}
+
+input[type=checkbox]:checked + .slide {
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.leftLabel {
+	padding-right: 8px;
+	padding-bottom: 30px;
+}
+
+.rightLabel {
+	padding-left: 8px;
+	padding-bottom: 30px;
 }
 
 .title {
@@ -161,7 +239,7 @@ body {
 }
 
 .keyLetter {
-	transform: skew(-5deg, -5deg);
+	transform: skew(0deg, 13deg);
 }
 
 .active {
@@ -184,6 +262,7 @@ body {
 .sliderDiv {
 	position: relative;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	margin: 0 5px;
@@ -204,6 +283,13 @@ body {
 	box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75), 0px 0px 10px 0px rgba(0,0,0,0.75);
 }
 
+.slideTitle {
+	font-family: 'Noto Sans', sans-serif;
+	color: #d3d3d3;
+	font-size: 10px;
+	margin-bottom: 10px;
+}
+
 .slider {
 	height: 350px;
 	width: 100%;
@@ -214,80 +300,11 @@ body {
 	outline: none;
 }
 
-.switch {
-  position: relative;
-  width: 50px;
-  height: 20px;
+#author {
+	margin-top: 15px;
+  text-align: center;
+  color: #adadad;
+  font-family: Raleway;
+  font-size: 14px;
 }
 
-/* Hide default HTML checkbox */
-.switch input {
-  display: none;
-}
-
-/* The slider */
-.slide {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-
-}
-
-.slide:before {
-  position: absolute;
-  content: "";
-  height: 50px;
-  width: 50px;
-  top: -15px;
-  left: 0;
-  border-radius: 50%;
-	background: rgba(247,247,247,1);
-	background: -moz-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
-	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(247,247,247,1)), color-stop(54%, rgba(168,168,168,1)), color-stop(100%, rgba(168,168,168,1)));
-	background: -webkit-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
-	background: -o-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
-	background: -ms-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
-	background: radial-gradient(ellipse at center, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#a8a8a8', GradientType=1 );
-	-webkit-box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.75);
-	box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.75);
-  -webkit-transition: 0.05s;
-  transition: 0.05s;
-}
-
-.slide:after {
-	position: absolute;
-	top: -15px;
-	left: 24px;
-	content: "";
-	height: 27px;
-	width: 3px;
-	background: #555;
-	border-radius: 5px;
-	z-index: 5;
-}
-
-input[type=checkbox]:checked + .slide {
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.leftLabel {
-	padding-right: 8px;
-	padding-bottom: 30px;
-}
-
-.rightLabel {
-	padding-left: 8px;
-	padding-bottom: 30px;
-}
