Added display shadow

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -74,6 +74,10 @@ body {
 	font-family: 'Codystar', cursive;
 	font-size: 18px;
 	border-radius: 5px;
+	margin-top: 3px;
+	-webkit-box-shadow: inset 0px 0px 5px 1px rgba(0,0,0,0.75);
+	-moz-box-shadow: inset 0px 0px 5px 1px rgba(0,0,0,0.75);
+	box-shadow: inset 0px 0px 5px 1px rgba(0,0,0,0.75);
 }
 
 .knobDiv {
